test/TestPhases/namecheck/valid/sharing.blc
module

activity act (a: int32)(b shares a: int32 ) returns ref shares a int32
end
